// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swatch > applies classNames to root and color elements 1`] = `
<span
  class="inline-flex shrink-0 size-8 rounded-full overflow-hidden border border-neutral-300 dark:border-neutral-600 extra-root"
  data-testid="Swatch"
  style="background-image: url("/src/images/transparent-bg.gif");"
>
  <span
    class="flex items-center justify-center size-full extra-color"
    style="background-color: rgb(0, 0, 0);"
  />
</span>
`;

exports[`Swatch > renders correctly 1`] = `
<span
  class="inline-flex shrink-0 size-8 rounded-full overflow-hidden border border-neutral-300 dark:border-neutral-600"
  data-testid="Swatch"
  style="background-image: url("/src/images/transparent-bg.gif");"
>
  <span
    class="flex items-center justify-center size-full"
    style="background-color: oklch(0.54 0.194 250);"
  />
</span>
`;
